kubernetes/apps/selfhosted/memos/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
spec:
  hostnames:
    - memos.rodent.cc
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: memos-grpc
          namespace: selfhosted
          port: 5231
      matches:
        - headers:
            - type: Exact
              name: Content-Type
              value: "application/grpc-web+proto"
    - backendRefs:
        - name: memos-app
          namespace: selfhosted
          port: 5230
          weight: 1
